--- a/.github/workflows/ssh-smoke.yml
+++ b/.github/workflows/ssh-smoke.yml
@@ -1,7 +1,7 @@
 name: SSH smoke test
 
 on:
-  workflow_dispatch: {}  # lancement manuel
+  workflow_dispatch: {} # lancement manuel
 
 jobs:
   ssh-smoke:
@@ -24,3 +24,5 @@ jobs:
           USER: ${{ secrets.OVH_USER }}
         run: |
           ssh -o BatchMode=yes "${USER}@${HOST}" 'whoami && hostname && uptime'
+
+# test
