add tag in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,9 @@ name: Deploy to OVH
 
 on:
   push:
-    branches: [ master ]
+    tags:
+      - "build"
+    branches: [master]
   workflow_dispatch: {}
 
 concurrency:
